--- a/index.html
+++ b/index.html
@@ -12,12 +12,27 @@
 
 <nav>
     <ul>
-        <li><a href="">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="">Blog</a></li>
         <li><a href="">Quiz</a></li>
-        <li><a href="">Kontakt</a></li>
+        <li><a href="contact.html">Kontakt</a></li>
     </ul>
 </nav>
+
+<h1>Blog</h1>
+
+
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus ex id congue accumsan. Praesent nec purus nec mi bibendum hendrerit. Fusce ex neque, gravida mattis condimentum et, semper vitae nulla. Vivamus iaculis risus ac tellus laoreet efficitur. Sed tempor lectus sit amet molestie aliquam. Aenean commodo sollicitudin consequat. Nullam fermentum, purus nec tincidunt luctus, nulla nibh tristique metus, non cursus nisi ligula eu lacus. Ut et condimentum leo. Vivamus a sem pharetra, convallis lectus non, laoreet eros. Nunc aliquam velit mauris, vitae maximus est pretium id. Aliquam in mattis ipsum. Suspendisse eu velit vitae turpis suscipit sagittis. Integer quis suscipit lorem, sed ornare metus.
+
+    Proin hendrerit orci luctus dolor facilisis auctor. Sed at dolor ultrices mi luctus pellentesque. Proin non fermentum purus. Ut sit amet posuere libero, vel efficitur odio. Duis in hendrerit nulla, vel laoreet erat. Nam tempus, dui eget tincidunt pharetra, velit libero lacinia arcu, at aliquet ex quam in lectus. Nunc ultrices rutrum tellus, et elementum elit tempus eget. Duis eleifend, turpis facilisis malesuada condimentum, turpis dolor blandit felis, vel sodales enim sem et odio. Ut nec dui sed neque porttitor pretium. Sed non arcu ex. Cras vulputate, lacus auctor efficitur lacinia, nunc quam aliquam nibh, laoreet varius neque felis consequat erat.
+</p>
+
+
+<img src="https://cdn.jpegmini.com/user/images/slider_puffin_before_mobile.jpg" alt="Obraz przedstawia zwierzaka"/>
+<footer>
+    <p>Copyrights © Jarosław Zieliński | 2020</p>
+</footer>
 
 </body>
 </html>
