--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,10 @@
 
 <nav>
     <ul>
-        <li><a href="">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="">Blog</a></li>
         <li><a href="">Quiz</a></li>
-        <li><a href="">Kontakt</a></li>
+        <li><a href="contact.html">Kontakt</a></li>
     </ul>
 </nav>
 
@@ -51,6 +51,8 @@
 
 <input type="checkbox" name="nazwa" value="wartość" id="kontrolka" checked>
 <label for="kontrolka">Zapoznałem się z polityką prywatnośći</label>
-
+<footer>
+    <p>Copyrights © Jarosław Zieliński | 2020</p>
+</footer>
 </body>
 </html>
