--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="font-awesome-4.7.0\css/font-awesome.min.css">
+
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style.css"   >
 
 </head>
 <body>
-
+<div class="row">
+    <div class="col-9">
 <nav>
     <ul>
         <li><a href="index.html">HOME</a></li>
@@ -27,6 +30,14 @@
 
     Proin hendrerit orci luctus dolor facilisis auctor. Sed at dolor ultrices mi luctus pellentesque. Proin non fermentum purus. Ut sit amet posuere libero, vel efficitur odio. Duis in hendrerit nulla, vel laoreet erat. Nam tempus, dui eget tincidunt pharetra, velit libero lacinia arcu, at aliquet ex quam in lectus. Nunc ultrices rutrum tellus, et elementum elit tempus eget. Duis eleifend, turpis facilisis malesuada condimentum, turpis dolor blandit felis, vel sodales enim sem et odio. Ut nec dui sed neque porttitor pretium. Sed non arcu ex. Cras vulputate, lacus auctor efficitur lacinia, nunc quam aliquam nibh, laoreet varius neque felis consequat erat.
 </p>
+    </div>
+    <div class="col-lg-3">
+        <h3>Szybki Kontakt</h3>
+        <i class="fa fa-facebook-official" aria-hidden="true">test</i>
+        <div><i class="fa fa-github" aria-hidden="true" style="font-size:20px"></i></div>
+        <div><i class="fa fa-instagram" aria-hidden="true"></i></div>
+    </div>
+</div>
 
 
 <img src="https://cdn.jpegmini.com/user/images/slider_puffin_before_mobile.jpg" alt="Obraz przedstawia zwierzaka"/>
