--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="">Blog</a></li>
         <li><a href="">Quiz</a></li>
         <li><a href="contact.html">Kontakt</a></li>
+        <li><a href="map.html">Mapa</a></li>
     </ul>
 </nav>
 
@@ -34,7 +35,7 @@
     <div class="col-lg-3">
         <h3>Szybki Kontakt</h3>
         <i class="fa fa-facebook-official" aria-hidden="true">test</i>
-        <div><i class="fa fa-github" aria-hidden="true" style="font-size:20px"></i></div>
+        <div><a class="fa fa-github" aria-hidden="true" style="font-size:20px" href="https://github.com/"> GitHub</a></div>
         <div><i class="fa fa-instagram" aria-hidden="true"></i></div>
     </div>
 </div>
